<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/White"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_22sdp">

        <ImageView
            android:id="@+id/btnDialogClose"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@drawable/bg_ads_free_dialog_close_button"
            android:contentDescription="@string/ads_free_close"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_ads_free_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/adsFreeTextMuted" />

        <FrameLayout
            android:id="@+id/flDialogIcon"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/bg_ads_free_dialog_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_ads_free_clock" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="@string/ads_free_reward_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flDialogIcon" />

        <TextView
            android:id="@+id/tvDialogSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textColor="@color/adsFreeTextMuted"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle"
            tools:text="1 hour of ad-free browsing added to your account." />

        <TextView
            android:id="@+id/tvRewardPill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ads_free_reward_pill"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDialogSubtitle"
            tools:text="+1 hour, ad-free" />

        <LinearLayout
            android:id="@+id/btnWatchAnother"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ads_free_watch_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRewardPill">

            <ImageView
                android:layout_width="@dimen/_11sdp"
                android:layout_height="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/ic_ads_free_play" />

            <TextView
                android:id="@+id/tvWatchAnotherLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="1"
                android:textColor="@color/White"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                tools:text="Watch another for +3h" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnMaybeLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_4sdp"
            android:text="@string/ads_free_maybe_later"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnWatchAnother" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
